--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:js:copy-src": "babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx --copy-files",
     "build:js": "tsc && npm run build:js:copy-src",
     "build:js:copy-types": "mkdir -p ./dist/types/contracts && cp ./src/contracts/*.d.ts ./dist/types/contracts",
-    "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types",
+    "build:abi:copy": "mkdir -p ./dist/abis && cp -a ./artifacts/contracts/. ./dist/abis && rm -f ./dist/abis/**/*.dbg.json",
+    "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types && npm run build:abi:copy",
     "clean:build": "TS_NODE_TRANSPILE_ONLY=1 hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
     "commit": "git-cz",
     "commit:retry": "npm run commit -- --retry",
