--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
-    "@typechain/ethers-v5": "^7.1.2",
-    "@typechain/hardhat": "^2.3.0",
+    "@typechain/ethers-v5": "~10.0.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
     "@types/faker": "^5.5.8",
@@ -107,7 +107,7 @@
     "solidity-coverage": "^0.7.21",
     "solium": "^1.2.5",
     "ts-node": "^10.9.1",
-    "typechain": "^5.1.2",
+    "typechain": "^8.1.0",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2"
   },
