--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
     "@defi-wonderland/smock": "^2.2.0",
     "@ls-age/commitlint-circle": "1.0.0",
     "@maticnetwork/fx-portal": "^1.0.4",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.3",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.2",
     "@typechain/ethers-v5": "^7.1.2",
@@ -91,24 +92,23 @@
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "faker": "^5.5.3",
     "git-cz": "^4.7.6",
-    "hardhat": "^2.6.4",
+    "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-watcher": "^2.1.1",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
-    "semantic-release": "^17.4.2",
+    "prettier-plugin-solidity": "^1.0.0-dev.23",
+    "semantic-release": "^19.0.3",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.17",
+    "solidity-coverage": "^0.7.21",
     "solium": "^1.2.5",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.9.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.3",
+    "typescript": "^4.7.4",
     "uuid": "^8.3.2"
   },
   "config": {
@@ -118,5 +118,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "dependencies": {}
 }
