--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,13 +12,17 @@ name: Release
 
 jobs:
   tests:
+    name: Tests
     uses: ./.github/workflows/tests.yml
+
   linters:
+    name: Linters
     uses: ./.github/workflows/linters.yml
+
   release:
     name: Publish Release
     runs-on: ubuntu-latest
-    needs: [tests, linters]
+    needs: [ tests, linters ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
